test/corpus/primitive.txt
===
unit type
===
()
---
(source_file
    (unit))

===
boolean true
===
true
---
(source_file
    (boolean))

===
boolean false
===
false
---
(source_file
    (boolean))

===
byte literal
===
b'\xff'
---
(source_file
    (byte))

===
char literal
===
'今'
---
(source_file
    (char))

===
integer literal
===
42
---
(source_file
    (integer))

===
float literal
===
3.1418
---
(source_file
    (float))

===
static string
===
"Hello World"
---
(source_file
    (static_string))
